[gd_scene load_steps=7 format=2]

[ext_resource path="res://桐生一馬-900x506.jpg" type="Texture" id=1]
[ext_resource path="res://puzzle.tscn" type="PackedScene" id=2]
[ext_resource path="res://PixelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://world.gd" type="Script" id=4]
[ext_resource path="res://text_window.tscn" type="PackedScene" id=5]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/buy-button.png-480b83c568e2e9f52273bddfde3f40f5.stex"

[node name="world" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 180.17, 90.6137 )
scale = Vector2( 0.399433, 0.355314 )
texture = ExtResource( 1 )

[node name="puzzle" parent="." instance=ExtResource( 2 )]
position = Vector2( 97.2283, 117.468 )

[node name="puzzle2" parent="." instance=ExtResource( 2 )]
position = Vector2( 59.1307, 91.6724 )

[node name="puzzle3" parent="." instance=ExtResource( 2 )]
position = Vector2( 78.5763, 104.372 )

[node name="puzzle4" parent="." instance=ExtResource( 2 )]
position = Vector2( 116.277, 78.5763 )

[node name="puzzle5" parent="." instance=ExtResource( 2 )]
position = Vector2( 59.5275, 117.071 )

[node name="puzzle6" parent="." instance=ExtResource( 2 )]
position = Vector2( 97.6252, 91.6724 )

[node name="puzzle7" parent="." instance=ExtResource( 2 )]
position = Vector2( 78.5763, 130.167 )

[node name="puzzle8" parent="." instance=ExtResource( 2 )]
position = Vector2( 78.5764, 79.7669 )

[node name="puzzle9" parent="." instance=ExtResource( 2 )]
position = Vector2( 116.277, 104.372 )

[node name="puzzle10" parent="." instance=ExtResource( 2 )]
position = Vector2( 96.8315, 67.0677 )

[node name="quit" type="Button" parent="."]
margin_left = 301.606
margin_top = 5.15905
margin_right = 355.606
margin_bottom = 30.159
custom_fonts/font = ExtResource( 3 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_window" parent="." instance=ExtResource( 5 )]
position = Vector2( 181.835, 88.4977 )

[node name="menu1" type="Button" parent="."]
margin_left = 3.17479
margin_top = 1.5874
margin_right = 46.1748
margin_bottom = 28.5874
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu1_bg" type="Sprite" parent="."]
position = Vector2( 26.9858, 19.0488 )
texture = SubResource( 1 )

[node name="text_window2" parent="." instance=ExtResource( 5 )]
position = Vector2( 135.115, 89.1652 )
z_index = 8

[node name="menu2" type="Button" parent="."]
margin_left = 54.9932
margin_top = 2.33032
margin_right = 98.9932
margin_bottom = 30.3303
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="quit" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="menu1" to="." method="_on_menu1_pressed"]
[connection signal="pressed" from="menu1" to="text_window" method="_on_menu1_pressed"]
[connection signal="pressed" from="menu2" to="." method="_on_menu2_pressed"]
[connection signal="pressed" from="menu2" to="text_window2" method="_on_menu2_pressed"]
